# specware

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  commit-check.toml  commitlint.yml  pyproject.toml
.github/workflows/: commit-check.yml  commitlint.yml  pr-comment.yml  publish-pypi.yml  publish-testpypi.yml  python-package-freebsd.yml  python-package.yml
spec-types/spec/: build-action.yml  build-default-value.yml  build-enabled-by-list.yml  build-enabled-by.yml  build-extension.yml  build-install-source.yml  build-install.yml  build-mkimage.yml  build-option-name.yml  build-option-value.yml  build.yml  interface-brief.yml  interface-description.yml  interface-errno-role.yml  interface-return-directive.yml  performance-runtime-limits-provider-role.yml  performance-runtime-limits-provider.yml  performance-runtime-limits-role.yml  requirement-action-pre-states-exp-list.yml  requirement-action-pre-states-exp.yml  requirement-action-pre-states-skip.yml  requirement-action-transition-post.yml  requirement-action-transition-pre-states.yml  requirement-action-transition-pre.yml  requirement-design-target.yml  requirement-ecss.yml  requirement-fatal-error.yml  requirement-non-functional-generic.yml  requirement-standard-tailoring-role.yml  requirement-standard.yml  statement-of-compliance-role.yml  statement-of-compliance-status.yml  statement-of-compliance.yml  test-timeouts-by-build-config.yml  test-timeouts-by-name.yml  test-timeouts-role.yml  test-timeouts.yml  verification-acceptable-test-error-list.yml  verification-acceptable-test-error.yml  verification-code-coverage-branches-list.yml  (+13 more)
src/specware/: __init__.py  applconfig.py  build.py  cliexport.py  cliexportheader.py  clifind.py  cliverify.py  cliview.py  contentc.py  interface.py  interfacedoc.py  interfacemapper.py  rtems.py  spec.pickle  transitionmap.py  util.py  validation.py
tests/: specware.yml  test_applconfig.py  test_build.py  test_cli.py  test_content_c.py  test_interface.py  test_interfacedoc.py  test_rtems.py  test_util.py  test_validation.py  util.py
tests/spec-applconfig/: a.yml  b.yml  c.yml  define.yml  e.yml  f.yml  func.yml  g.yml  h.yml  i.yml  j.yml  k.yml  l.yml  m.yml  max-two.yml  (+2 more)
(+62 files in other folders)
